// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#E6E8EC",
      "borderRadius": 8,
      "marginVertical": 5,
      "paddingHorizontal": 10,
      "paddingVertical": 5,
    }
  }
>
  <Connect(Translate(CelebrateItemName))
    name="Roge Goers"
    person={
      Object {
        "first_name": "Roge",
        "last_name": "Goers",
      }
    }
    pressable={true}
  />
  <MyText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "paddingVertical": 3,
      }
    }
  >
    hello roge
  </MyText>
  <CardTime
    date="2018-06-11 12:00:00 UTC"
  />
</View>
`;

exports[`renders correctly with onLongPress 1`] = `
<TouchableOpacity
  accessibilityTraits="button"
  activeOpacity={0.6}
  onLongPress={[Function]}
  onPress={[Function]}
>
  <Component
    style={
      Object {
        "backgroundColor": "#E6E8EC",
        "borderRadius": 8,
        "marginVertical": 5,
        "paddingHorizontal": 10,
        "paddingVertical": 5,
      }
    }
  >
    <Connect(Translate(CelebrateItemName))
      name="Roge Goers"
      person={
        Object {
          "first_name": "Roge",
          "last_name": "Goers",
        }
      }
      pressable={true}
    />
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "paddingVertical": 3,
        }
      }
    >
      hello roge
    </MyText>
    <CardTime
      date="2018-06-11 12:00:00 UTC"
    />
  </Component>
</TouchableOpacity>
`;
